--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,12 @@
       <artifactId>jackson-databind</artifactId>
       <version>2.8.8.1</version>
     </dependency>
+    <dependency>
+      <groupId>org.codehaus.jackson</groupId>
+      <artifactId>jackson-mapper-asl</artifactId>
+      <version>1.9.13</version>
+    </dependency>
+
     <!--MyBatis-->
     <dependency>
       <groupId>org.mybatis</groupId>
