--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,4 +1,4 @@
 jdbc.driver=com.mysql.cj.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/testspring?serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8
-jdbc.username=root
-jdbc.password=root
+jdbc.url=jdbc:mysql://localhost:3306/2017springdemo?serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8
+jdbc.username=wangkai
+jdbc.password=wangkai
